@@ -1,42 +1,0 @@
-<?php
-/*
-Gibbon, Flexible & Open School System
-Copyright (C) 2010, Ross Parker
-
-This program is free software: you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.
-
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with this program. If not, see <http://www.gnu.org/licenses/>.
-*/
-
-@session_start() ;
-
-//Module includes
-include "./modules/" . $_SESSION[$guid]["module"] . "/moduleFunctions.php" ;
-
-if (isActionAccessible($guid, $connection2, "/modules/Messenger/messageWall_view_full.php")==FALSE) {
-	//Acess denied
-	print "<div class='error'>" ;
-		print _("Your request failed because you do not have access to this action.") ;
-	print "</div>" ;
-}
-else {
-	$date=date("Y-m-d") ;
-	
-	print "<h1>" ;
-		print _("Today's Messages") . " <span style='font-size: 55%; font-style: italic'>(" . dateConvertBack($guid, $date) . ")</span>" ;
-	print "</h1>" ;
-	
-	print getMessages($guid, $connection2, "print", $date) ;
-}
-?>
-						
-						
