@@ -904,7 +904,7 @@ div.ui-dialog button.ui-button {
     color:#CC0000;
 }
 
-//From WP for tinymce display
+/* From WP for tinymce display */
 .zerosize{height:0;width:0;margin:0;border:0;padding:0;overflow:hidden;position:absolute;}
 a.edButtonPreview,a.edButtonHTML{height:18px;margin:5px 5px 0 0;padding:4px 5px 2px;float:right;cursor:pointer;border-width:1px;border-style:solid;-moz-border-radius:3px 3px 0 0;-webkit-border-top-right-radius:3px;-webkit-border-top-left-radius:3px;-khtml-border-top-right-radius:3px;-khtml-border-top-left-radius:3px;border-top-right-radius:3px;border-top-left-radius:3px;}
 #editorcontainer{border-color:#ccc #ccc #dfdfdf;}
